Bugfix: Allow overflow after closeOrderConfirmation to make page scrollable again.

--- a/style.css
+++ b/style.css
@@ -453,7 +453,7 @@ main {
     background: rgba(0, 0, 0, 0.45);
 }
 
-.closeOrderBtn {
+.btnCloseOrderConfirmation {
     position: absolute;
     top: 12px;
     right: 16px;
